--- a/index.html
+++ b/index.html
@@ -130,6 +130,24 @@
         "Me gusta tu sinceridad y esa frialdad tuya que me atrae ❤️",
         "Tu presencia cambia el lugar a mejor 💓",
         "Tu forma de pensar me inspira y me hace admirarte 💓",
+        "Tu sonrisa ilumina todo 😄",
+        "Siempre auténtica y segura 💓",
+        "Tu dulzura me inspira ✨",
+        "Eres radiante y brillante ✨",
+        "Tienes un corazón enorme 💖",
+        "Tu mirada me hipnotiza ❤️",
+        "Eres valiente y decidida 💖",
+        "Cada detalle tuyo refleja tu esencia 💓",
+        "Tu personalidad es única 🌸",
+        "Me encanta cómo te expresas 💡",
+        "Eres divertida y espontánea 😄",
+        "Siempre sabes lo que quieres 💓",
+        "Eres increíblemente especial 💝",
+        "Tu energía hace todo mejor 💖",
+        "Eres mi inspiración diaria ❤️",
+        "Te amo Leydi 💓",
+
+  
     ];
 
     let index = 0; // índice para controlar la frase actual
